Bug 109137 - FILESAVE: ODT: when reopened with LO, the graphic moves to page 2
Summary: FILESAVE: ODT: when reopened with LO, the graphic moves to page 2
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, filter:odt, regression
: 109851 112219 (view as bug list)
Depends on:
Blocks: Writer-Images DOCX-Textbox WPSShapeTextImport-Change
  Show dependency treegraph
 
Reported: 2017-07-15 19:03 UTC by Marco A.G.Pinto
Modified: 2020-05-31 01:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample/example (18.97 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-07-15 19:03 UTC, Marco A.G.Pinto
Details
sample2 (602.64 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-07-28 11:33 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco A.G.Pinto 2017-07-15 19:03:29 UTC
Created attachment 134651 [details]
sample/example

The subject says it all:

Steps:
1)Open with LO;
2)Save as ODT;
3)Reopen with LO;
4)The image will move to the second page.
Comment 1 MM 2017-07-15 22:46:04 UTC
Confirmed with Version: 5.1.6.2
Build ID: 07ac168c60a517dba0f0d7bc7540f5afa45f0909
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; 
Locale: en-US (en_US.UTF-8); Calc: single


Confirmed with Version: 6.0.0.0.alpha0+
Build ID: 6549993b17feb1423c76b5237f086e6f35346a2c
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-07-06_07:37:37
Locale: en-US (en_US.UTF-8); Calc: single
Comment 2 MM 2017-07-15 23:02:08 UTC
Unconfirmed with v4.3.7.2 under mint 17.3 x64.
Confirmed with v4.4.7.2 under mint 17.3 x64.

The error isn't in filesave, but with fileopen. Can open a file saved with v4.4+ without a problem in v4.3.
Comment 3 Xisco Faulí 2017-07-17 09:53:26 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2014-06-18 09:57:31 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-06-18 10:09:15 (GMT)
commit d379d18666aa42031359ca8eb34b0021960347ae (patch)
tree d0324e2297be256e8c291cd6e17676f68f9f072d
parent 8e67a7796f598de2f11b694542bccb48343f0d9a (diff)

oox: import WPS shape with text as shape with textbox

This allows having real shapes (like having rounded corners) and complex
content (like containing a table) at the same time.

WPS shapes are wrappers around drawingML markup in DOCX files, so this
only affects the DOCX import.

bisected with bibisect-44max

Adding Cc: to Miklos Vajna
Comment 4 Xisco Faulí 2017-07-28 11:33:17 UTC
Created attachment 134931 [details]
sample2

Another document affected by the same issue
Comment 5 Xisco Faulí 2017-09-05 10:25:25 UTC
*** Bug 112219 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2018-08-07 07:14:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59f5f666a5085ae58a8dd164636a6bea47e6bddc

tdf#109137 sw textbox: fix initial wrap type of a shape's textbox

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2018-08-07 16:20:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=510f335621db11873499751d63be6f8460c38915&h=libreoffice-6-1

tdf#109137 sw textbox: fix initial wrap type of a shape's textbox

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2018-08-08 09:20:53 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: c86a47a9d3debbc7e8ee6247f573e7f98c611f19
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Miklos, Thanks for fixing this!!!
Comment 9 Miklos Vajna 2019-08-13 08:09:44 UTC
*** Bug 109851 has been marked as a duplicate of this bug. ***