tdf#109137 sw textbox: fix initial wrap type of a shape's textbox

This was already working for the DOCX import by luck. Make the wrap type
explicit, so the ODF import has it correctly.

The wrap type for the hidden sw text frame ("textbox of a shape") should
be always "through", wrapping is only performed for the surrounding draw
shape.

Change-Id: Ice28cd5b517d544cfab4900dee32f01b534fee26
Reviewed-on: https://gerrit.libreoffice.org/58656
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>